# drift-happens

./: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .typos.toml  CITATION.cff  CONTRIBUTING.md  README.md  pixi.toml  pyproject.toml
.github/: CODEOWNERS  release-drafter.yml
.github/workflows/: chore.yml  ci.yml  github-pages.yml  smoke.yml
artifacts/: README.md
artifacts/experiment_plans/: p00_smoke_seed0.yaml  p10_yearbook_headline_seeds.yaml  p20_text_headline_seeds.yaml  p40_amazon_reviews_23_all_seeds.yaml  p50_arxiv_all_seeds.yaml  p60_yearbook_all_seeds.yaml  p70_imdb_faces_all_seeds.yaml  p80_seed0_all_presets.yaml  p90_remaining_seeds_all_presets.yaml  p99_everything_all_seeds.yaml
docs/: architecture.md  artifacts.md  release-blockers.md  results-plotting.md  slurm.md  wandb.md
drift_happens/: const.py
drift_happens/analysis/: README.md  __init__.py
drift_happens/cli/: __init__.py  analysis.py  artifacts.py  datasets_setup.py  experiment.py  main.py
drift_happens/configs/: __init__.py  base.py  experiment.py  logging_cfg.py  protocol.py  runtime.py  snapshot.py  sweep.py  trainers.py
drift_happens/dataset/: cache.py  chunk_sampler.py  const.py  dataset.py  embedding_cache.py  utils.py
drift_happens/evaluation/: metrics.py  results.py
drift_happens/experiments/: __init__.py  amazon_reviews_23.py  arxiv.py  common.py  image_models.py  imdb_faces.py  materialize.py  plans.py  registry.py  seed_summary.py  smoke.py  source.py  types.py  yearbook.py
drift_happens/model/: parameters.py
drift_happens/pipeline/: context.py  evaluation.py  models.py  training.py  training_config.py
drift_happens/runtime/: __init__.py  adapters.py  aggregate.py  base.py  completion_filter.py  dataset_pipeline.py  local.py  lock_repair.py  locks.py  metrics.py  progress.py  run_store.py  stage_status.py  stages.py  sweep.py  synthetic.py  wandb.py
drift_happens/sample/: splits.py
drift_happens/tools/: cli.py
drift_happens/utils/: artifact_bundles.py  artifact_remote.py  artifacts.py  env.py  git.py  ids.py  lockfile.py  log.py  numpy.py  paths.py  pytorch.py  snapshot.py  tensor.py  wandb_completion.py  wandb_identity.py
paper/: bibliography.bib  build_arxiv_bundle.sh  build_lncs_bundle.sh  figures.sha256  main-lncs.tex  main-preprint.tex  neutral2col.sty  preamble-common.tex  render_paper.sh  splncs04short.bst
paper/figures/: drift_types.tex
paper/pages/: 0_abstract.tex  1_intro.tex  2_background.tex  3_methods.tex  4_evaluation.tex  5_results.tex  6_conclusion.tex  a_compute.tex  b_metrics.tex  c_yearbook.tex  d_amazon.tex  e_arxiv.tex
paper/tables/: amazon_reviews_by_family.tex  amazon_reviews_cutoff_28.tex  (+19 more)
scripts/: check_artifact_policy.py
tests/: conftest.py  test_conftest_guards.py
website/: amazon-results.html  amazon.html  arxiv-results.html  arxiv.html  index.html  methods.html  results.html  yearbook-results.html  yearbook.html
(+368 files in other folders)
